# gpu-fryer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yaml  build_ci.yaml  rust.yaml  trufflehog.yaml
src/: log.rs  logging.rs  main.rs
