[package]
name = "gpu-fryer"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/huggingface/gpu-fryer"
readme = "README.md"
categories = ["command-line-utilities"]
description = "GPU fryer is a tool to stress test GPUs and detect any abnormal thermal throttling or performance degradation. It is especially useful to test GPUs running ML inference or training workloads for which performances are dictated by the slowest GPU in the system."

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
cudarc = { version = "0.13.0", features = ["cuda-12060", "f16"] }
nvml-wrapper = "0.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
half = "2.4.1"

[[bin]]
name = "gpu-fryer"
path = "src/main.rs"
test = false
bench = false
