[package]
name = "gpu-fryer"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/huggingface/gpu-fryer"
readme = "README.md"
categories = ["command-line-utilities"]
description = "GPU fryer is a tool to stress test GPUs and detect any abnormal thermal throttling or performance degradation. It is especially useful to test GPUs running ML inference or training workloads for which performances are dictated by the slowest GPU in the system."

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
cudarc = { git = "https://github.com/Hugoch/cudarc.git", branch = "feat/float8", features = ["cublas", "cublaslt", "curand", "driver", "nvrtc", "runtime", "std", "cuda-12090", "f16", "f8", "dynamic-linking"], default-features = false }
nvml-wrapper = "0.11.0"
rand = { version = "0.9.2", features = ["small_rng"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
half = "2.4.1"
float8 = { version = "0.3.0" }
futures = "0.3.31"

[[bin]]
name = "gpu-fryer"
path = "src/main.rs"
test = false
bench = false

[patch.crates-io]
cudarc = { git = "https://github.com/Hugoch/cudarc.git", branch = "feat/float8", version = "0.16.0" }
float8 = { git = "https://github.com/Hugoch/float8.git", branch = "feat/integration-cudarc", version = "0.3.0" }
